--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,7 @@ background-position: center center;
     padding: 15px;
 }
 header {
-    background-color:#26C6DA;
+    background-color:#00838F;
     padding: 10px;
     text-transform: uppercase;
     font-weight: bold;
